# graildient-descent

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.celery  Dockerfile.streamlit  LICENSE  README.md  config-defaults.yaml  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: tests.yml
airflow/dags/: grailed_etl_dag.py
api/: config.py  main.py  models.py  routers.py  services.py  utils.py
api/logging/: logger.py  middleware.py  models.py
celery_tasks/: config.py  services.py  worker.py
data_collection/: scraper.py  utils.py
graildient_descent/: experiment.py  feature_extraction.py  model.py  preprocessing.py  utils.py
kubernetes/: api-deployment.yaml  build-images.sh  celery-deployment.yaml  celery-flower-deployment.yaml  configmap.yaml  deploy-monitoring.sh  deploy.sh  grafana-datasources.yaml  grafana-deployment.yaml  ingress.yaml  kustomization.yaml  monitoring-ingress.yaml  namespace.yaml  nginx-deployment.yaml  node-exporter.yaml  postgres-deployment.yaml  postgres-exporter.yaml  prometheus-config.yaml  rabbitmq-deployment.yaml  secrets.yaml  streamlit-deployment.yaml
nginx/: nginx.conf
notebooks/: eda_preprocess_text.ipynb  prepare_datasets.ipynb  retrain_best_ml_model.ipynb
streamlit_app/: app.py  data_collection.py  eda.py  intro.py  ml_experiments.py  price_predictor.py
streamlit_app/modules/: config.py  data_collection_scraper.py  (+6 more)
sweeps/: catboost_bayes_sweep.yaml  catboost_encoder_grid_sweep.yaml  catboost_encoding_all_sweep.yaml  catboost_encoding_mid_high_sweep.yaml  condition_ohe_sweep.yaml  estimator_sweep.yaml  features_sweep.yaml  normalize_size_sweep.yaml  reducer_grid_sweep.yaml  ridge_bayes_sweep.yaml  vectorizer_grid_sweep.yaml  vectorizer_sweep.yaml
tests/: conftest.py  test_data_collection_utils.py  test_experiment.py  test_feature_extraction.py  test_graildient_utils.py  test_grailed_etl_dag.py  test_model.py  test_preprocessing.py  test_scraper.py
(+12 files in other folders)
